--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,6 +3,12 @@
 @import 'type';
 @import 'nav';
 
+* {
+  margin: 0;
+  padding: 0;
+  font-family: $subFont;
+}
+
 section {
   height: 100vh;
   width: 100%;
@@ -18,63 +24,74 @@ section {
 }
 
 #portfolio {
-  .row {
+  #top {
     padding-top: 50px;
   }
   img {
-    max-width: 100%;
+    display: block;
+  }
+  .row {
+    div {
+      img {
+        display: block;
+        border: 2px solid green;
+      }
+    }
   }
 }
-
-.imgWrap {
-  position: relative;
-  max-width: 100%;
-}
-
-.imgDescription {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background: rgba(29, 106, 154, 0.72);
-  color: #fff;
-
-
-  visibility: hidden;
-  opacity: 0;
-
-  /*remove comment if you want a gradual transition between states
-  -webkit-transition: visibility opacity 0.2s;
-  */
-}
-
-
-.imgWrap:hover .imgDescription {
-  visibility: visible;
-  opacity: 1;
-}
-
 
 #about {
+  position: relative;
+  padding-top: 5%;
+  height: 85vh;
   p {
     text-align: center;
+    font-family: Helvetica;
   }
-  img {
-    height: 40%;
-    display: block;
-    margin: 0 auto;
-    padding-bottom: 30px;
+  .row {
+    div {
+      text-align: center;
+      img {
+        width: 50%;
+        padding-bottom: 30px;
+      }
+    }
+    div {
+      ul {
+        li {
+          text-align: left;
+          list-style-position: outside;
+        }
+      }
+      b {
+        border: 1px solid black;
+        padding: 10px;
+      }
+    }
   }
-  ul {
+  #contact {
     text-align: center;
     list-style: none;
+    position: absolute;
+    bottom: 0;
     li {
       display: inline-block;
       padding: 0 10px;
       i {
         color: $accent;
+        font-size: 2.0rem;
       }
     }
   }
+}
+
+.title {
+    display: none;
+    position: relative;
+    text-align: center;
+    top: -170px;
+}
+
+.wrap:hover p.title {
+    display: block;
 }
