spacing on portfolio

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -33,8 +33,13 @@ section {
   .row {
     div {
       img {
+        width: 90%;
         display: block;
-        border: 2px solid green;
+        margin: 0 auto;
+      }
+      p {
+        display: block;
+        text-align: center;
       }
     }
   }
@@ -52,7 +57,7 @@ section {
     div {
       text-align: center;
       img {
-        width: 50%;
+        width: 60%;
         padding-bottom: 30px;
       }
     }
@@ -79,19 +84,8 @@ section {
       padding: 0 10px;
       i {
         color: $accent;
-        font-size: 2.0rem;
+        font-size: 2.5rem;
       }
     }
   }
-}
-
-.title {
-    display: none;
-    position: relative;
-    text-align: center;
-    top: -170px;
-}
-
-.wrap:hover p.title {
-    display: block;
 }
