--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,90 +2,4 @@
 @import 'variables';
 @import 'type';
 @import 'nav';
-
-* {
-  margin: 0;
-  padding: 0;
-  font-family: $subFont;
-}
-
-section {
-  height: 100vh;
-  width: 100%;
-}
-
-#hero {
-  :first-child {
-    margin-top: 50px;
-  }
-  .knockout-text {
-    margin-right: 20px;
-  }
-}
-
-#portfolio {
-  #top {
-    padding-top: 50px;
-  }
-  img {
-    display: block;
-  }
-  .row {
-    div {
-      img {
-        width: 90%;
-        display: block;
-        margin: 0 auto;
-      }
-      p {
-        display: block;
-        text-align: center;
-      }
-    }
-  }
-}
-
-#about {
-  position: relative;
-  padding-top: 5%;
-  height: 85vh;
-  p {
-    text-align: center;
-    font-family: Helvetica;
-  }
-  .row {
-    div {
-      text-align: center;
-      img {
-        width: 60%;
-        padding-bottom: 30px;
-      }
-    }
-    div {
-      ul {
-        li {
-          text-align: left;
-          list-style-position: outside;
-        }
-      }
-      b {
-        border: 1px solid black;
-        padding: 10px;
-      }
-    }
-  }
-  #contact {
-    text-align: center;
-    list-style: none;
-    position: absolute;
-    bottom: 0;
-    li {
-      display: inline-block;
-      padding: 0 10px;
-      i {
-        color: $accent;
-        font-size: 2.5rem;
-      }
-    }
-  }
-}
+@import 'layout';
