--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -4,6 +4,19 @@
   font-family: $subFont;
 }
 
+html,
+body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.wrapper {
+  min-height: 100%;
+  position: relative;
+}
+
 section {
   height: 100vh;
   width: 100%;
@@ -19,6 +32,7 @@ section {
 }
 
 #portfolio {
+  height: 70vh;
   #top {
     padding-top: 50px;
   }
@@ -32,6 +46,9 @@ section {
         display: block;
         margin: 0 auto;
       }
+      img:hover {
+        box-shadow: 0px 0px 9px 3px rgba(254,209,54,1);
+      }
       p {
         display: block;
         text-align: center;
@@ -42,9 +59,8 @@ section {
 }
 
 #about {
-  position: relative;
+  // position: relative;
   padding-top: 5%;
-  height: 85vh;
   p {
     text-align: center;
     font-family: Helvetica;
@@ -70,17 +86,17 @@ section {
       }
     }
   }
-  #contact {
+}
+
+footer {
+  ul {
     text-align: center;
-    list-style: none;
-    position: absolute;
-    bottom: 0;
     li {
       display: inline-block;
       padding: 0 10px;
-      i {
+      i.fa {
         color: $accent;
-        font-size: 3.0rem;
+        font-size: 30px;
       }
     }
   }
