--- a/src/scss/_type.scss
+++ b/src/scss/_type.scss
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: 'Bebas';
+  src: url('./font/bebas.ttf');
+}
+
 .knockout-text {
     background: url('https://juliesparis.files.wordpress.com/2011/07/dscn1264-cluny-gothic-vaults-used.jpg');
     background-size: cover;
