--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -42,7 +42,7 @@ section {
   .row {
     div {
       img {
-        width: 80%;
+        width: 75%;
         display: block;
         margin: 0 auto;
       }
@@ -59,7 +59,6 @@ section {
 }
 
 #about {
-  // position: relative;
   padding-top: 5%;
   p {
     text-align: center;
@@ -97,6 +96,9 @@ footer {
       i.fa {
         color: $accent;
         font-size: 30px;
+        &:hover {
+          color: $hover;
+        }
       }
     }
   }
